# Softwaredesign

./: LICENSE  README.md  SelfStudyC.ipynb  SelfstudyB.ipynb  SelfstudyD.ipynb  SelfstudyE.ipynb  my_calendar.py  pyproject.toml
