[project]
name = "Softwaredesign"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Markus Brachmann", email = "bm8798@mci4me.at"},
    {name = "Markusbra", email = "@mcime.atbm"},
]
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "numpy>=2.4.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
